<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Memoria</string>
    <string name="author_name">Котыло Павел</string>
    <string name="start">Старт</string>
    <string name="settings">Настройки</string>
    <string name="highscore">Рекорды</string>
    <string name="exit">Выход</string>
    <string name="setTitle">Настройки</string>
    <string name="Collection">Коллекция</string>
    <string name="Color">Цвет фона</string>
    <string name="field_size">Размер поля</string>
    <string name="game_type">Тип игры</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">refresh</string>
    <string name="about">Об авторе</string>
    <string name="dialog_about_title">Об авторе</string>
    <string name="dialog_about_message">Разработал\nстудент группы АС573\n%1$s</string>
    <string name="dialog_positive_button_text">OK</string>
    <string name="dialog_congratulations_title">Поздравляем!</string>
    <string name="dialog_congratulations_message">"Игра закончена\nХодов: %1$d\nВремя: %2$s"</string>
    <string name="io_read_error">Произошла ошибка чтения таблицы рекордов</string>
    <string name="io_write_error">Произошла ошибка записи таблицы рекордов</string>

    <string-array name="Collections">
        <item>animal</item>
        <item>cocktail</item>
        <item>desert</item>
        <item>face</item>
        <item>farm</item>
        <item>flower</item>
        <item>ghost</item>
        <item>green</item>
        <item>ice_cream</item>
        <item>geisha</item>
        <item>love</item>
        <item>monster</item>
        <item>plasticine</item>
        <item>space</item>
    </string-array>

    <string-array name="CollectionsTitle">
        <item>Животные</item>
        <item>Коктейли</item>
        <item>Десерты</item>
        <item>Лица</item>
        <item>Ферма</item>
        <item>Цветы</item>
        <item>Привидения</item>
        <item>Рожицы</item>
        <item>Мороженое</item>
        <item>Гейши</item>
        <item>Любовь</item>
        <item>Монстры</item>
        <item>Платилин</item>
        <item>Космос</item>
    </string-array>

    <string-array name="Color">
        <item>#5C6BC0</item>
        <item>#8D6E63</item>
        <item>#FFA726</item>
        <item>#9CCC65</item>
        <item>#29B6F6</item>
        <item>#7E57C2</item>
        <item>#FFEE58</item>
        <item>#BDBDBD</item>
        <item>#78909C</item>
        <item>#26A69A</item>
        <item tools:ignore="Typos">#F48FB1</item>
    </string-array>

    <string-array name="ColorTitle">
        <item>Синий</item>
        <item>Коричневый</item>
        <item>Оранжевый</item>
        <item>Зеленый</item>
        <item>Голубой</item>
        <item>Фиолетовый</item>
        <item>Желтый</item>
        <item>Серый</item>
        <item>Серо Голубой</item>
        <item>Бирюзовый</item>
        <item>Розовый</item>
    </string-array>

    <string-array name="SizeTitle">
        <item>3x2</item>
        <item>3x4</item>
        <item>4x3</item>
        <item>5x6</item>
        <item>6x6</item>
    </string-array>

    <string-array name="Size">
        <item>3x2</item>
        <item>3x4</item>
        <item>4x3</item>
        <item>5x6</item>
        <item>6x6</item>
    </string-array>

    <string-array name="GameTypeTitle">
        <item>Pairs</item>
        <item>Triplets</item>
    </string-array>

    <string-array name="GameType">
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>