<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setTitle">

        <ListPreference
            android:defaultValue="animal"
            android:entries="@array/CollectionsTitle"
            android:entryValues="@array/Collections"
            android:key="PictureCollection"
            android:title="@string/Collection" />

        <ListPreference
            android:defaultValue="#000000"
            android:entries="@array/ColorTitle"
            android:entryValues="@array/Color"
            android:key="BackgroundColor"
            android:title="@string/Color" />

        <ListPreference
            android:defaultValue="4x4"
            android:entries="@array/SizeTitle"
            android:entryValues="@array/Size"
            android:key="FieldSize"
            android:title="@string/field_size" />
    </PreferenceCategory>
</PreferenceScreen>