<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnStart"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="200dp"
        android:background="@drawable/style"
        android:text="@string/start" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="200dp"
        android:background="@drawable/style"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnScore"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="200dp"
        android:background="@drawable/style"
        android:text="@string/highscore" />

    <Button
        android:id="@+id/btnAbout"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="200dp"
        android:background="@drawable/style"
        android:text="@string/about" />

    <Button
        android:id="@+id/btnExit"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="200dp"
        android:background="@drawable/style"
        android:text="@string/exit" />
</LinearLayout>
